react-app/src/components/SignupFormPage/SignupForm.css
.signup-form-container {
    display: flex;
    /* flex-direction: column; */
    flex-direction: column;
    width: 60%;
    justify-content: space-between;
    margin-top: 30px;
    align-items: space-between;
}
.signup-form-top {
    display: flex;
    justify-content: space-between;
}

.signup-form-container label {
    display: flex;
    flex-direction: column;
    position: relative;
}

.signup-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.signup-logo-wrapper {
    display: flex;
    text-decoration: none;
    gap: 15px;
    margin-top: 30px;
}

.signup-form-container input {
    border-radius: 30px;
    height: 40px;
    border: 1px solid lightgrey;
    padding: 0 10px;
    color: grey;
    position: relative;
}
.signup-form-container select {
    border-radius: 30px;
    height: 40px;
    border: 1px solid lightgrey;
    padding: 0 10px;
    color: grey;
}

.signup-form-container input:focus {
    outline: 1px solid #80f;
}

.signup-form-container select:focus {
    outline: 1px solid #80f;
}

.signup-form-container > p {
    text-align: center;
}

.enter-info-text {
    font-size: 25px;
    font-weight: 600;
    margin-top: 10px;
}

.signup-form-left {
    width: 45%;
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.signup-form-right {
    width: 45%;
    flex-direction: column;
    gap: 15px;
    display: flex;
    flex-direction: column;
    position: relative;
}

.signup-form-bottom {
    align-self: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 50px;
}


.signup-form-container button {
    padding: 15px;
    background-color: #80f;
    color: white;
    border: none;
    border-radius: 30px;
    font-weight: 600;
    margin-bottom: 30px;
}

.signup-form-container button:hover {
    cursor: pointer;
}

.login-switch {
    text-decoration: none;
}

h1 {
    color: #80f;
}

.dob-label {
    position: absolute;
    z-index: 1;
    right: 35px;
    top: 10px;
    color: grey;
    font-size: 14px;
}

.gender-dropdown-button {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 40px;
    font-size: 14px;
    color: grey;
    padding: 10px;
    border-radius: 30px;
    border: 1px solid lightgrey;
}

.gender-dropdown-button:hover {
    cursor: pointer;
}

.gender-settings-dropdown {
    position: absolute;
    background-color: white;
    width: 100%;
    right: 0px;
    top: 45px;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 15px;
    z-index: 1;
    border: 1px solid #80f;
    border-radius: 23px;
}

.gender-settings-dropdown li {
    list-style-type: none;
    width: 100%;
    text-align: center;
    padding: 5px;
    border-radius: 3px;
}

.gender-settings-dropdown li:hover {
    background-color: rgba(211, 211, 211, 0.244);
    cursor: pointer;
}

.fa-caret-down, .fa-caret-up {
    font-size: 12px;
    color: lightgrey;
}

.looking-settings-dropdown {
    position: absolute;
    background-color: white;
    width: 100%;
    right: 0px;
    top: 100px;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 15px;
    z-index: 1;
    border: 1px solid #80f;
    border-radius: 23px;
}

.looking-settings-dropdown li {
    list-style-type: none;
    width: 100%;
    text-align: center;
    padding: 5px;
    border-radius: 3px;
}

.looking-settings-dropdown li:hover {
    background-color: rgba(211, 211, 211, 0.244);
    cursor: pointer;
}

.state-settings-dropdown {
    position: absolute;
    background-color: white;
    width: 100%;
    right: 0px;
    top: 210px;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 15px;
    z-index: 1;
    border: 1px solid #80f;
    border-radius: 23px;
    overflow-y: scroll;
    height: 200px;
}

.state-settings-dropdown li {
    list-style-type: none;
    width: 100%;
    text-align: center;
    padding: 5px;
    border-radius: 3px;
}

.state-settings-dropdown li:hover {
    background-color: rgba(211, 211, 211, 0.244);
    cursor: pointer;
}

#disabled-signup-button {
    background-color: grey;
}

